--- a/sindel.css
+++ b/sindel.css
@@ -119,6 +119,8 @@
         margin-top: 1px;
         }
         .sindel__drop-inner {
+            background: #fff;
+
             border-top:    1px solid #e0e0e0;
             border-left:   1px solid #e0e0e0;
             border-right:  1px solid #e0e0e0;
