--- a/src/sindel.styl
+++ b/src/sindel.styl
@@ -119,7 +119,8 @@
         background unquote('url("data:image/svg+xml,%3Csvg xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22 width%3D%2215%22 height%3D%2216%22%3E%3Cpath d%3D%22M13.5.5l-8 12L1.7 8l-1 1.6L5.6 15l9.1-13.4z%22%2F%3E%3C%2Fsvg%3E")') 10px 50% no-repeat
   
         
-    &__item_active
+    &__item_active,
+    &__item_hover
         background-color #a7d3ff
 
 @keyframes sindel-hidden {
