--- a/src/sindel.styl
+++ b/src/sindel.styl
@@ -86,9 +86,6 @@
         list-style none
         position relative
 
-    &__majors
-        background #fff
-
     &_active &__search
         display block
 
@@ -102,11 +99,11 @@
         font-family Arial, sans-serif
         border-radius 2px
 
-    &__minors_overflow
+    &__list_overflow
         overflow-y auto
         max-height 192px
 
-    &__minors
+    &__list
         background #fff
 
     &__item
