--- a/src/sindel.styl
+++ b/src/sindel.styl
@@ -41,6 +41,7 @@
         height 100%
         box-sizing border-box
         cursor pointer
+        background #fff
 
     &__current-text
         display block
@@ -81,9 +82,8 @@
         left -9999px
         transition left 0s .1s
         opacity 0
-
-    &__drop-inner
         background #fff
+        padding-top 6px
 
     &__drop ul
         list-style none
@@ -93,7 +93,7 @@
         display block
 
     &__search
-        margin 6px
+        margin 0 6px 6px 6px
         height 24px
         padding 0 3px
         border 1px solid #e0e0e0
